cabal-version:       >= 1.10
name:                vaultaire
version:             2.0.2
synopsis:            Data vault for metrics
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.6
stability:           experimental

build-type:          Simple

source-repository    head
  type:              git
  location:          git@github.com:anchor/vaultaire.git

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   TimeStore
  other-modules:     TimeStore.Core
  build-depends:     base >=3 && <5,
                     bytestring,
                     packer,
                     async,
                     pipes,
                     vector,
                     lens,
                     unix,
                     containers,
                     rados-haskell >= 3.0.3

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           unit-tests
  hs-source-dirs:    tests
  main-is:           UnitTests.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     rados-timestore
  ghc-options:       -threaded

-- vim: set tabstop=21 expandtab:
