cabal-version:       >= 1.10
name:                rados-timestore
version:             2.0.2
synopsis:            Time series data store, backed by Ceph
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.6
stability:           experimental

build-type:          Simple

source-repository    head
  type:              git
  location:          git@github.com:anchor/rados-timestore.git

flag rados
  description: Whether to build with rados backend support.
  default: True

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   TimeStore
                     TimeStore.Mutable
  other-modules:     TimeStore.Algorithms,
                     TimeStore.Index,
                     TimeStore.Core,
                     TimeStore.StoreHelpers,
                     TimeStore.Stores.Memory

  build-depends:     base >=3 && <5,
                     bytestring,
                     packer,
                     async,
                     pipes,
                     bifunctors,
                     vector,
                     vector-algorithms,
                     tuple,
                     primitive,
                     lens,
                     unix,
                     pretty-hex,
                     spool,
                     tagged,
                     containers

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -auto-all

  if flag(rados)
    cpp-options:     -DRADOS
    build-depends:   rados-haskell >= 3.1.0
    other-modules:   TimeStore.Stores.Rados


executable store
  hs-source-dirs:    src
  main-is:           Store.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     optparse-applicative,
                     directory,
                     rados-timestore

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           unit-tests
  hs-source-dirs:    tests, lib
  main-is:           UnitTests.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     hspec,
                     QuickCheck,
                     bytestring,
                     tuple,
                     vector,
                     vector-algorithms,
                     primitive,
                     lens,
                     pretty-hex,
                     bifunctors,
                     packer,
                     async,
                     unix,
                     pipes,
                     tagged,
                     containers,
                     spool,
                     rados-timestore
  ghc-options:       -threaded
  ghc-prof-options:  -auto-all

test-suite           fuzzy-tests
  hs-source-dirs:    tests, lib
  main-is:           FuzzyTests.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     hspec,
                     QuickCheck,
                     bytestring,
                     tuple,
                     vector,
                     vector-algorithms,
                     primitive,
                     lens,
                     pretty-hex,
                     split,
                     bifunctors,
                     packer,
                     async,
                     unix,
                     pipes,
                     tagged,
                     containers,
                     spool,
                     rados-timestore
  ghc-options:       -threaded
  ghc-prof-options:  -auto-all

test-suite           store-tests
  hs-source-dirs:    tests, lib
  main-is:           StoreTests.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     hspec,
                     QuickCheck,
                     bytestring,
                     tuple,
                     vector,
                     vector-algorithms,
                     primitive,
                     lens,
                     pretty-hex,
                     split,
                     bifunctors,
                     packer,
                     async,
                     unix,
                     pipes,
                     tagged,
                     containers,
                     spool,
                     rados-timestore
  ghc-options:       -threaded
  ghc-prof-options:  -auto-all

  if flag(rados)
    cpp-options: -DRADOS
    build-depends:   rados-haskell >= 3.1.0
